--- a/style.css
+++ b/style.css
@@ -33,10 +33,21 @@ button {
 
 .header {
     padding: 39px 0;
-    margin-bottom: 160px;
+    margin-bottom: 80px;
 }
 
-.navigation {}
+.navigation img {
+    margin-right: 460px;
+    width: 137px;
+    height: 40px;
+}
+
+.navigation {
+    display: flex;
+    justify-content: space-between;
+    height: 40px;
+    align-items: center;
+}
 
 .navigation a {
     font-size: 16px;
@@ -46,9 +57,15 @@ button {
     margin-bottom: 197px;
 }
 
-.mainContent {}
+.mainContent {
+    display: flex;
+    justify-content: space-between;
+    height: 375px;
+}
 
-.mainContent_leftSide {}
+.mainContent_leftSide {
+    max-width: 556px;
+}
 
 
 .mainContent_leftSide h1 {
@@ -68,7 +85,7 @@ button {
 .mainContent_leftSide-btnList button {
     color: #fff;
     padding: 15px 30px;
-    border-radius: 5px;
+    border-radius: 40px;
     background: #df6b0d;
     font-size: 20px;
     border: none;
@@ -80,4 +97,8 @@ button {
 }
 
 .logos {
+    display: flex;
+    justify-content: space-between;
+    height: 50px;
+    gap: 48px;
 }
